--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bip39": "^2.4.0",
     "bitcoinjs-lib": "^3.3.0",
     "keypress": "^0.2.1",
+    "node-cache": "^4.1.1",
     "wordwrap": "^1.0.0"
   }
 }
