--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The screen-free, audio-friendly, fully-accessible Bitcoin cold storage solution.",
   "main": "icywallet.js",
   "scripts": {
-    "test": "node test/tests.js"
+    "test": "node test/tests.js",
+    "lint": "./node_modules/.bin/eslint lib/*.js test/*.js *.js --fix"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,18 @@
     "bitcoinjs-lib": "^3.3.0",
     "keypress": "^0.2.1",
     "node-cache": "^4.1.1",
-    "wordwrap": "^1.0.0"
-  }
+    "wordwrap": "^1.0.0",
+    "async": "^2.6.0",
+    "google-tts-api": "0.0.2",
+    "lodash": "^4.17.4",
+    "readline": "^1.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "mocha": "^3.1.2",
+    "nodemon": "^1.11.0",
+    "nconf": "^0.8.4",
+    "eslint": "^3.19.0"
+  },
 }
